[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="CombatResultPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CombatResultPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CombatResultPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "전투 결과"
theme_override_font_sizes/font_size = 24

[node name="ResultLabel" type="RichTextLabel" parent="CombatResultPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
bbcode_enabled = true
text = ""
fit_content = true

[node name="CloseButton" type="Button" parent="CombatResultPanel/VBoxContainer"]
layout_mode = 2
text = "확인"

[node name="GameOverPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "게임 종료"
theme_override_font_sizes/font_size = 28

[node name="WinnerLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = ""
theme_override_font_sizes/font_size = 18

[node name="ReturnButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "메인으로"
